--- a/zoho/style.css
+++ b/zoho/style.css
@@ -16,6 +16,7 @@ body{
     font-size: 17px;
    background-color: #f8f9fb;
    overflow-x: hidden;
+   box-sizing: border-box;
 }
 
 .header{
@@ -24,6 +25,8 @@ body{
     border-bottom: 1px solid rgb(224, 216, 216);
     /* box-shadow: 2px 2px 6px 0.5px rgb(146, 140, 140); */
     height: 70px;
+    /* width: 1280px; */
+    box-sizing: content-box;
     position: fixed;
     top: 0;
     left: 0;
@@ -42,11 +45,17 @@ nav>ul>li{
     transition: 1s;
     margin-left: 20px;
 }
+.navsec2{
+    float: end;
+    margin-left: 200px;
+    padding-left: 80px;
+    /* margin-right: 40px; */
+}
 .nav-ul{
     display: flex;
     padding: 25px;
     gap: 5px;
-    margin-right: 285px;
+    /* margin-right: 285px; */
 }
 .products,.company,.customers{
     transition: 0.5s;
@@ -255,6 +264,8 @@ li:hover{
     transition: 1s;
 }
 .signup{
+    width: 85px;
+    height: 40px;
     padding: 9px 10px 9px 10px;
     border: solid red 1px;
     margin-top: -10px;
