--- a/zoho/style.css
+++ b/zoho/style.css
@@ -77,6 +77,7 @@ justify-content: right;
 }
 .ef{
     transform: rotate(-180deg);
+    color: blue;
     transition: 1s;
 }
 /* .company:hover ~ .dropdownlist{
@@ -102,21 +103,26 @@ justify-content: right;
 .dropdownlist ul{
     padding: 20px;
 }
+.color{
+    color: blue;
+}
 .active{
     /* display: block; */
     position: absolute;
+    color: blue;
     z-index: 10;
     visibility: visible;
     transform: translateY(-10px);
     transition: 0.2s;
     
 }
-.dropdownlist:hover{
+/* .dropdownlist:hover{
     /* display: block; */
-    visibility: visible;
-    transform: translateY(-10px);
+    /* visibility: visible; */
+    /* transform: translateY(-10px); */
 
-}
+/* } */ 
+
 .dropdownlist ul{
     list-style-type: none;
 }
@@ -1110,6 +1116,7 @@ position: relative;
 footer{
     width: 100%;
     height: 150px;
+    margin-top: 40px;
     background-color: #0b0d1f;
     text-align: center;
     align-content:center ;
@@ -1120,4 +1127,49 @@ footer img{
 }
 .footer-c{
     color: white;
+}
+.language{
+    position: relative;
+}
+.select-container{
+    position: absolute;
+    visibility: hidden; 
+    right:-10px;
+    top: 40px;
+    width: 450px;
+    transition: 0.2s;
+    height: 350px;
+    background-color: white;
+    border: solid 1px gainsboro;
+    z-index: 3;
+    display:flex;
+    justify-content: space-evenly;
+}
+.select-container::before{
+    content: "";
+    position: absolute;
+    top: -7px;
+    right: 15px;
+    width: 10px;
+    height: 10px;
+    background-color: white;
+    border-left: solid 1px gainsboro ;
+    border-top: solid 1px gainsboro;
+    z-index: 4;
+    transform: rotate(45deg);
+}
+.language-1,.language-2{
+    margin-top: 35px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.language-1 p:hover,.language-2 p:hover{
+    color: blue;
+}
+
+.sactive{
+    visibility: visible;
+    transform: translateY(-10px);
+    transition: 0.2s;
 }
