--- a/slider/style.css
+++ b/slider/style.css
@@ -130,3 +130,56 @@ span:hover{
     transform: scale(1.5);
     box-shadow:1px 0px 8px 4px gray;
 }
+
+.mode{
+    position: relative;
+    z-index: 5;
+}
+.container1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#toggle-btn{
+    position: relative;
+    /* top: -100px; */
+    left: -30px;
+    z-index: -2;
+}
+#label-1{
+    width: 70px;
+    height: 30px;
+    border-radius: 20px;
+    position: relative;
+    background-color: black;
+    /* transition: 1s; */
+
+}
+#label-1::before{
+    content: "";
+    position: absolute;
+    top: 3px;
+    left: 4px;
+    width: 25px;
+    height: 25px;
+    background-color: white;
+    border-radius: 20px;
+    transition: 1s;
+
+}
+
+.lab #label-1::before{
+    transform: translateX(38px);
+    transition: 1s;
+}
+.lab #label-1{
+    background-color: white;
+    border: solid 1px black;
+    transition: 1s;
+
+}
+.lab #label-1::before{
+    background-color: black;
+    transition: 1s;
+
+}
